miniextendr-macros/tests/ui/fn_lifecycle_unknown_key.stderr
error: unknown lifecycle option; expected: stage, when, what, with, details, id
 --> tests/ui/fn_lifecycle_unknown_key.rs:5:25
  |
5 | #[miniextendr(lifecycle(unknown = "val"))]
  |                         ^^^^^^^
